# webgpu

./: CMakeLists.txt  CMakePresets.json  Readme.md
cubemap/: readme.md
ext/sdl2webgpu/: CMakeLists.txt
ext/webgpu/: CMakeLists.txt
models/: DamagedHelmet.gltf
shaders/: colorpass.wgsl  shadowpass.wgsl
src/: animator.cpp  animator.h  cubemap.h  image.cpp  image.h  input.cpp  input.h  main.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  renderable.cpp  renderable.h  scene.cpp  scene.h  scheduler.cpp  scheduler.h  viewport.cpp  viewport.h
src/graphics/: gpu.cpp  gpu.h  renderpass.cpp  renderpass.h  renderpasshelpers.cpp  renderpasshelpers.h  renderpipeline.h  rendertarget.cpp  rendertarget.h  resourcepool.cpp  resourcepool.h  shadowpass.cpp  shadowpass.h  texture.cpp  texture.h  uniforms.h  uniformsdata.cpp  uniformsdata.h  vertexbuffer.cpp  vertexbuffer.h  wgpu-utils.h
src/inputs/: roll.cpp  roll.h
src/io/: loader.cpp  loader.h
